###############################################################################
###############################################################################
##
##  Copyright (C) 2009-2019 Red Hat, Inc.
##  
##  This copyrighted material is made available to anyone wishing to use,
##  modify, copy, or redistribute it subject to the terms and conditions
##  of the GNU General Public License v.2.
##
###############################################################################
###############################################################################

MAINTAINERCLEANFILES	= Makefile.in

EXTRA_DIST		= $(man8_MANS) $(man5_MANS)

man8_MANS 		= fence_virt.8 fence_xvm.8 fence_virtd.8
man5_MANS 		= fence_virt.conf.5
