MAINTAINERCLEANFILES	= Makefile.in

SUBDIRS 		= lib \
			  alom \
			  apc \
			  apc_snmp \
			  baytech \
			  bladecenter \
			  brocade \
			  bullpap \
			  cisco_mds \
			  cisco_ucs \
			  cpint \
			  drac \
			  drac5 \
			  eaton_snmp \
			  egenera \
			  eps \
			  ibmblade \
			  ifmib \
			  ilo \
			  ilo_mp \
			  intelmodular \
			  ipmilan \
			  ldom \
			  lpar \
			  manual \
			  mcdata \
			  node_assassin \
			  nss_wrapper \
			  rackswitch \
			  rhevm \
			  rsa \
			  rsb \
			  sanbox2 \
			  scsi \
			  virsh \
			  vixel \
			  vmware \
			  vmware_soap \
			  wti \
			  xcat \
			  zvm
